Chat (#82)
* initial commit

* thread creation, fix file upload

* read messages

* sort messages, scroll down

* format messages
- escape html
- use linkifyjs for recognizing links
- turn *aaa* to <b>aaa<b/>

* search in threads

* show and download attachments

* convert search to use v-model directive

* correct margin

* send messages

* attach files

* remove sidebar tabs

* remove side scrolling

* upgrade packages

* update api documentation
also remove /chat/upload as it was only needed for debug

* add reload button, reload messages periodically

* update api documentation for thread creation

* create threads
return id of new thread
