# backend/src/api/chat/dto/create-chat.dto.ts
@@ -1,0 +1,5 @@
+export class CreateChatDto {
+  recipientId: number;
+  text: string;
+  threadName: string;
+}
